longhorn/templates/ingressroute.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: longhorn-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.k3s.xmple.io`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
  tls:
    secretName: longhorn-dashboard-tls
    options:
      name: mintls13
      namespace: traefik
